src/objects/BoardBook__c.object
<CustomObject>
    <fields>
        <fullName>BookCode__c</fullName>
        <label>BookCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookTabs__c</fullName>
        <label>BookTabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Committee</label>
        <referenceTo>Committee__c</referenceTo>
        <relationshipLabel>Board Meetings</relationshipLabel>
        <relationshipName>Board_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Live Oak Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Oak Bancshares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank + Bancshares</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MeetingCity__c</fullName>
        <label>MeetingCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingEndDate__c</fullName>
        <label>MeetingEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MeetingHotel__c</fullName>
        <label>MeetingHotel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingRoom__c</fullName>
        <label>MeetingRoom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingStartDate__c</fullName>
        <label>MeetingStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MeetingState__c</fullName>
        <label>MeetingState</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Board Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MeetingStartDate__c</columns>
        <columns>MeetingEndDate__c</columns>
        <columns>MeetingCity__c</columns>
        <columns>MeetingState__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BoardBook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>